<?xml version="1.0"?>
<package>
  <name>ez_interactive_marker</name>
  <version>0.0.2</version>
  <description>Easily create interactive markers from yaml files</description>

  <maintainer email="nekanat.stock@gmail.com">neka-nat</maintainer>

  <license>BSD</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/ez_interactive_marker</url> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>rospy_message_converter</build_depend>
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <run_depend>rospy</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy_message_converter</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>
  <!-- Use test_depend for packages you need only for testing: -->
  <test_depend>python-nose</test_depend>
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
